--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Maven template
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -7,5 +8,10 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
+# IntelliJ project files
+.idea
+*.iml
