--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,8 @@
         <!-- Versions for optional dependencies -->
 
         <!-- Versions for test dependencies -->
+        <assertj.version>3.16.1</assertj.version>
+        <junit.jupiter.version>5.6.2</junit.jupiter.version>
 
         <!-- Versions for plugins -->
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
@@ -190,6 +192,36 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
