--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,6 @@
         <kiwi.version>0.8.0</kiwi.version>
         <lombok.version>1.18.12</lombok.version>
 
-        <!-- Versions for optional dependencies -->
-
         <!-- Versions for test dependencies -->
         <assertj.version>3.16.1</assertj.version>
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
@@ -113,6 +111,12 @@
     </properties>
 
     <dependencies>
+
+        <!--
+        NOTES:
+        1. Exclusions are due to version conflicts (found using Maven Enforcer plugin)
+        2. When there are version conflicts, we exclude that dependency, then add an explicit dependency.
+        -->
 
         <!-- required dependencies -->
         <dependency>
