--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,10 @@
         <logstash.version>6.4</logstash.version>
 
         <!-- Versions for provided dependencies -->
-        <guava.version>28.2-jre</guava.version>
         <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
         <jackson.version>2.10.5</jackson.version>
         <kiwi.version>0.8.0</kiwi.version>
         <lombok.version>1.18.12</lombok.version>
-
-        <!-- Versions for optional dependencies -->
 
         <!-- Versions for test dependencies -->
         <assertj.version>3.16.1</assertj.version>
@@ -115,6 +112,12 @@
 
     <dependencies>
 
+        <!--
+        NOTES:
+        1. Exclusions are due to version conflicts (found using Maven Enforcer plugin)
+        2. When there are version conflicts, we exclude that dependency, then add an explicit dependency.
+        -->
+
         <!-- required dependencies -->
         <dependency>
             <groupId>io.dropwizard</groupId>
@@ -135,6 +138,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.kiwiproject</groupId>
+            <artifactId>kiwi</artifactId>
+            <version>${kiwi.version}</version>
+        </dependency>
+
         <!-- provided dependencies -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -150,23 +159,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.errorprone</groupId>
-                    <artifactId>error_prone_annotations</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.checkerframework</groupId>
-                    <artifactId>checker-qual</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate-validator.version}</version>
@@ -177,13 +169,6 @@
                     <artifactId>classmate</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.kiwiproject</groupId>
-            <artifactId>kiwi</artifactId>
-            <version>${kiwi.version}</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
