--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.kiwiproject</groupId>
     <artifactId>dropwizard-elk-appender</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -46,7 +46,7 @@
         <connection>scm:git:https://github.com/kiwiproject/dropwizard-elk-appender.git</connection>
         <developerConnection>scm:git:git@github.com:kiwiproject/dropwizard-elk-appender.git</developerConnection>
         <url>https://github.com/kiwiproject/dropwizard-elk-appender</url>
-        <tag>HEAD</tag>
+        <tag>v0.9.0</tag>
     </scm>
 
     <distributionManagement>
