--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>dropwizard-elk-appender</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.10.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -29,9 +29,9 @@
 
     <properties>
         <!-- Versions for required dependencies -->
-        <dropwizard.version>2.0.12</dropwizard.version>
+        <dropwizard.version>2.0.13</dropwizard.version>
         <logstash.version>6.4</logstash.version>
-        <kiwi.version>0.8.0</kiwi.version>
+        <kiwi.version>0.11.0</kiwi.version>
 
         <!-- Versions for provided dependencies -->
         <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
@@ -67,6 +67,12 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-logging</artifactId>
             <version>${dropwizard.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
