--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,13 @@
     <properties>
         <!-- Versions for required dependencies -->
         <dropwizard.version>2.0.19</dropwizard.version>
-        <dropwizard-config-providers.version>0.10.0</dropwizard-config-providers.version>
+        <dropwizard-config-providers.version>0.11.0</dropwizard-config-providers.version>
         <logstash.version>6.4</logstash.version>
-        <kiwi.version>0.18.0</kiwi.version>
+        <kiwi.version>0.19.0</kiwi.version>
 
         <!-- Versions for provided dependencies -->
-        <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
-        <jackson.version>2.10.5</jackson.version>
+        <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
+        <jackson.version>[2.10.5,2.10.6)</jackson.version>
 
         <!-- Versions for test dependencies -->
         <junit-pioneer.version>1.1.0</junit-pioneer.version>
@@ -75,6 +75,12 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-logging</artifactId>
             <version>${dropwizard.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -104,6 +110,13 @@
 
         <!-- provided dependencies -->
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-guava</artifactId>
             <version>${jackson.version}</version>
@@ -112,6 +125,10 @@
                 <exclusion>
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
