Pin junit-pioneer to 1.4.0 due to bug
Pioneer issue 480 is causing our use of @SetSystemProperty on @Nested
test classes to fail. It affects pioneer 1.4.1 but not earlier versions
so pinning to 1.4.0 with a TODO.

Reference: https://github.com/junit-pioneer/junit-pioneer/issues/480

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
         <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
         <jackson.version>[2.10.5,2.10.6)</jackson.version>
 
+        <!--
+            TODO Cannot use 1.4.1 due to https://github.com/junit-pioneer/junit-pioneer/issues/480
+             This issue will be fixed in Pioneer 1.4.2 which as of 2021-05-18 is not released.
+             For now, overriding version to 1.4.0, which works.
+        -->
+        <junit-pioneer.version>1.4.0</junit-pioneer.version>
+
         <!-- Sonar Properties -->
         <sonar.projectKey>kiwiproject_dropwizard-elk-appender</sonar.projectKey>
         <sonar.organization>kiwiproject</sonar.organization>
