--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.kiwiproject</groupId>
         <artifactId>kiwi-parent</artifactId>
-        <version>1.5.0</version>
+        <version>1.6.0</version>
     </parent>
 
     <artifactId>dropwizard-elk-appender</artifactId>
@@ -30,6 +30,7 @@
         <!-- Versions for required dependencies -->
         <dropwizard-config-providers.version>1.1.2-SNAPSHOT</dropwizard-config-providers.version>
         <kiwi.version>1.1.1-SNAPSHOT</kiwi.version>
+        <kiwi-bom.verson>0.4.0-SNAPSHOT</kiwi-bom.verson>
 
         <!-- Sonar Properties -->
         <sonar.projectKey>kiwiproject_dropwizard-elk-appender</sonar.projectKey>
