--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
 
     <properties>
         <!-- Versions for required dependencies -->
-        <dropwizard-config-providers.version>1.1.2-SNAPSHOT</dropwizard-config-providers.version>
-        <kiwi.version>1.1.1-SNAPSHOT</kiwi.version>
-        <kiwi-bom.verson>0.4.0-SNAPSHOT</kiwi-bom.verson>
+        <dropwizard-config-providers.version>1.1.2</dropwizard-config-providers.version>
+        <kiwi.version>1.2.0</kiwi.version>
+        <kiwi-bom.verson>0.4.0</kiwi-bom.verson>
 
         <!-- Sonar Properties -->
         <sonar.projectKey>kiwiproject_dropwizard-elk-appender</sonar.projectKey>
