--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>org.kiwiproject</groupId>
                 <artifactId>kiwi-bom</artifactId>
-                <version>0.1.0-SNAPSHOT</version>
+                <version>${kiwi-bom.verson}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
