Add integration tests and update existing test to use Testcontainers (#294)
* Add integration tests: one "heavy" one that uses a full Logstash
container and is only activated with a system property, and a
"lightweight" one that uses netcat to capture the log messages in a
lightweight container with netcat pre-installed. Both of these extend an
abstract base test, AbstractElkAppenderIntegrationTest.
* Update existing ElkAppenderFactoryTest to use the lightweight
container, so that the TCP tests don't throw exceptions when they get
"connection refused". This didn't cause the tests to fail, but is
confusing when you see a bunch of stack traces where you aren't
expecting them in successful tests.
* Add several test extensions to eliminate duplicated code across the
tests: LogstashContainerExtension and Dropwizard TestAppExtension.
* Add a logback-test.xml logging configuration for test code.
* Add several test dependencies including dropwizard-testing support,
dropwizard-core, kiwi-test, and testcontainers for junit jupiter.
* Remove the (now redundant) .keep file from src/test/resources

Closes #292
Closes #293

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
         <!-- Versions for required dependencies -->
         <dropwizard-config-providers.version>2.3.10</dropwizard-config-providers.version>
         <kiwi.version>4.14.0</kiwi.version>
-        <kiwi-bom.verson>2.2.0</kiwi-bom.verson>
+        <kiwi-test.version>3.12.1</kiwi-test.version>
+        <kiwi-bom.version>2.2.0</kiwi-bom.version>
 
         <!-- Sonar Properties -->
         <sonar.projectKey>kiwiproject_dropwizard-elk-appender</sonar.projectKey>
@@ -44,11 +45,11 @@
             <dependency>
                 <groupId>org.kiwiproject</groupId>
                 <artifactId>kiwi-bom</artifactId>
-                <version>${kiwi-bom.verson}</version>
+                <version>${kiwi-bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            
+
             <dependency>
                 <groupId>org.kiwiproject</groupId>
                 <artifactId>kiwi</artifactId>
@@ -90,6 +91,33 @@
         <dependency>
             <groupId>org.kiwiproject</groupId>
             <artifactId>kiwi</artifactId>
+        </dependency>
+
+        <!-- test dependencies -->
+
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kiwiproject</groupId>
+            <artifactId>kiwi-test</artifactId>
+            <version>${kiwi-test.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
