Testing logstash docker image updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -36,9 +36,9 @@ updates:
     directory: "/dependabot-images"
     schedule:
       interval: "weekly"
-    allow:
-      - dependency-name: "docker.elastic.co/logstash/logstash"
-      - dependency-name: "toolbelt/netcat"
+    #    allow:
+    #      - dependency-name: "docker.elastic.co/logstash/logstash"
+    #      - dependency-name: "toolbelt/netcat"
     groups:
       elk-stack:
         patterns:
